--- a/hol.cabal
+++ b/hol.cabal
@@ -13,10 +13,13 @@ description:
 
 Library
   build-depends:
-    base >= 4.0 && < 5.0
+    base >= 4.0 && < 5.0,
+    containers >= 0.4.2.1 && < 1.0
   hs-source-dirs: src
   ghc-options: -Wall
   exposed-modules:
     HOL.Data
     HOL.Name
     HOL.Type
+    HOL.TypeOp
+    HOL.TypeVar
