--- a/hol.cabal
+++ b/hol.cabal
@@ -18,13 +18,14 @@ Library
   hs-source-dirs: src
   ghc-options: -Wall
   exposed-modules:
-    HOL.AlphaTerm
     HOL.Const
     HOL.Data
     HOL.Name
     HOL.Sequent
     HOL.Size
     HOL.Term
+    HOL.TermAlpha
+    HOL.Thm
     HOL.Type
     HOL.TypeOp
     HOL.TypeVar
