--- a/hol.cabal
+++ b/hol.cabal
@@ -14,13 +14,14 @@ description:
 Library
   build-depends:
     base >= 4.0 && < 5.0,
-    containers >= 0.4.2.1 && < 1.0
+    containers >= 0.5 && < 0.6
   hs-source-dirs: src
   ghc-options: -Wall
   exposed-modules:
     HOL.Const
     HOL.Data
     HOL.Name
+    HOL.Rule
     HOL.Sequent
     HOL.Subst
     HOL.Term
