--- a/hol.cabal
+++ b/hol.cabal
@@ -14,12 +14,13 @@ description:
 Library
   build-depends:
     base >= 4.0 && < 5.0,
-    bytestring >= 0.9 && < 1.0,
+    bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
     pretty >= 1.1 && < 1.2,
     text >= 0.11 && < 0.12
   hs-source-dirs: src
   ghc-options: -Wall
+  ghc-prof-options: -fprof-auto-top
   exposed-modules:
     HOL.Const
     HOL.Data
@@ -39,3 +40,38 @@ Library
     HOL.TypeSubst
     HOL.TypeVar
     HOL.Var
+
+test-suite hol-test
+  type: exitcode-stdio-1.0
+  build-depends:
+    base >= 4.0 && < 5.0,
+    bytestring >= 0.9 && < 0.10,
+    containers >= 0.5 && < 0.6,
+    pretty >= 1.1 && < 1.2,
+    text >= 0.11 && < 0.12
+  hs-source-dirs: src
+  ghc-options: -Wall
+  main-is: Test.hs
+
+-- Profiling steps:
+-- * apt-get install ghc-prof libghc-text-prof
+-- * cabal sandbox init
+-- * cabal install --only-dependencies --enable-library-profiling
+-- * cabal install --enable-library-profiling --enable-executable-profiling .
+-- * cabal run hol-profile
+-- * hp2ps -e8in -c hol-profile.hp
+-- * ps2pdf hol-profile.ps
+-- * less hol-profile.prof
+-- * open hol-profile.pdf
+executable hol-profile
+  build-depends:
+    base >= 4.0 && < 5.0,
+    bytestring >= 0.9 && < 0.10,
+    containers >= 0.5 && < 0.6,
+    pretty >= 1.1 && < 1.2,
+    text >= 0.11 && < 0.12
+  hs-source-dirs: src
+  ghc-options:
+    -fprof-auto-top
+    "-with-rtsopts=-p -s -h -i0.1"
+  main-is: Profile.hs
