--- a/hol.cabal
+++ b/hol.cabal
@@ -1,5 +1,5 @@
 name: hol
-version: 1.0
+version: 1.1
 category: Logic
 synopsis: Higher order logic
 license: MIT
@@ -9,7 +9,7 @@ build-type: Simple
 author: Joe Leslie-Hurd <joe@gilith.com>
 maintainer: Joe Leslie-Hurd <joe@gilith.com>
 description:
-  This package implements a higher order logic kernel.
+  This package implements a higher order logic kernel with OpenTheory support.
 
 Library
   build-depends:
@@ -26,6 +26,7 @@ Library
     HOL.Const
     HOL.Data
     HOL.Name
+    HOL.OpenTheory
     HOL.Print
     HOL.Rule
     HOL.Sequent
@@ -55,17 +56,6 @@ test-suite hol-test
   ghc-options: -Wall
   main-is: Test.hs
 
--- Profiling steps:
--- > apt-get install ghc-prof libghc-text-prof libghc-transformers-prof
--- > cabal sandbox init
--- > cabal install --only-dependencies --enable-library-profiling
--- > cabal install --enable-library-profiling --enable-executable-profiling .
--- > opentheory info --article -o base.art base
--- > cabal bench hol-profile
--- > less hol-profile.prof
--- > hp2ps -e8in -c hol-profile.hp
--- > ps2pdf hol-profile.ps
--- > open hol-profile.pdf
 benchmark hol-profile
   type: exitcode-stdio-1.0
   build-depends:
