--- a/hol.cabal
+++ b/hol.cabal
@@ -6,6 +6,7 @@ license: MIT
 license-file: LICENSE
 cabal-version: >= 1.8.0.2
 build-type: Simple
+extra-source-files: README.md doc/axioms.txt
 author: Joe Leslie-Hurd <joe@gilith.com>
 maintainer: Joe Leslie-Hurd <joe@gilith.com>
 description:
@@ -50,6 +51,7 @@ test-suite hol-test
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
     pretty >= 1.1 && < 1.2,
+    QuickCheck >= 2.4 && < 2.5,
     text >= 0.11 && < 0.12,
     transformers >= 0.3 && < 0.4
   hs-source-dirs: src
