--- a/hol.cabal
+++ b/hol.cabal
@@ -18,6 +18,7 @@ Library
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     text >= 0.11 && < 0.12,
     transformers >= 0.3 && < 0.4
@@ -29,6 +30,7 @@ Library
     HOL.Data
     HOL.Name
     HOL.OpenTheory
+    HOL.Parse
     HOL.Print
     HOL.Rule
     HOL.Sequent
@@ -51,6 +53,7 @@ test-suite hol-test
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     QuickCheck >= 2.4 && < 2.5,
     text >= 0.11 && < 0.12,
@@ -65,6 +68,7 @@ benchmark hol-profile
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     text >= 0.11 && < 0.12,
     transformers >= 0.3 && < 0.4
