--- a/hol.cabal
+++ b/hol.cabal
@@ -6,7 +6,7 @@ license: MIT
 license-file: LICENSE
 cabal-version: >= 1.8.0.2
 build-type: Simple
-extra-source-files: README.md doc/axioms.txt doc/bool.txt test/bool.art test/bool.int test/bool.thy
+extra-source-files: README.md doc/axioms.txt doc/bool.txt test/bool.art test/bool.int test/bool.thy test/bool-def.art
 extra-tmp-files: hol-profile.aux hol-profile.hp hol-profile.pdf hol-profile.prof hol-profile.ps
 author: Joe Leslie-Hurd <joe@gilith.com>
 maintainer: Joe Leslie-Hurd <joe@gilith.com>
@@ -18,6 +18,7 @@ Library
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    filepath >= 1.3 && < 1.4,
     parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     process >= 1.2 && < 1.3,
@@ -31,6 +32,9 @@ Library
     HOL.Data
     HOL.Name
     HOL.OpenTheory
+    HOL.OpenTheory.Article
+    HOL.OpenTheory.Interpret
+    HOL.OpenTheory.Package
     HOL.Parse
     HOL.Print
     HOL.Rule
@@ -48,12 +52,29 @@ Library
     HOL.TypeVar
     HOL.Var
 
+executable hol-pkg
+  build-depends:
+    base >= 4.0 && < 5.0,
+    bytestring >= 0.9 && < 0.10,
+    containers >= 0.5 && < 0.6,
+    filepath >= 1.3 && < 1.4,
+    parsec >= 3.1 && < 3.2,
+    pretty >= 1.1 && < 1.2,
+    process >= 1.2 && < 1.3,
+    QuickCheck >= 2.4 && < 2.5,
+    text >= 0.11 && < 0.12,
+    transformers >= 0.3 && < 0.4
+  hs-source-dirs: src
+  ghc-options: -Wall -threaded "-with-rtsopts=-N" -rtsopts
+  main-is: Main.hs
+
 test-suite hol-test
   type: exitcode-stdio-1.0
   build-depends:
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    filepath >= 1.3 && < 1.4,
     parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     process >= 1.2 && < 1.3,
@@ -70,6 +91,7 @@ benchmark hol-profile
     base >= 4.0 && < 5.0,
     bytestring >= 0.9 && < 0.10,
     containers >= 0.5 && < 0.6,
+    filepath >= 1.3 && < 1.4,
     parsec >= 3.1 && < 3.2,
     pretty >= 1.1 && < 1.2,
     process >= 1.2 && < 1.3,
@@ -77,6 +99,7 @@ benchmark hol-profile
     transformers >= 0.3 && < 0.4
   hs-source-dirs: src
   ghc-options:
+    -Wall
     -fprof-auto-top
     "-with-rtsopts=-p -s -h -i0.1"
   main-is: Profile.hs
