--- a/hol.cabal
+++ b/hol.cabal
@@ -1,5 +1,5 @@
 name: hol
-version: 1.3
+version: 1.4
 category: Logic
 synopsis: Higher order logic
 license: MIT
@@ -16,14 +16,14 @@ description:
 Library
   build-depends:
     base >= 4.0 && < 5.0,
-    bytestring >= 0.9 && < 0.10,
-    containers >= 0.5 && < 0.6,
-    filepath >= 1.3 && < 1.4,
-    parsec >= 3.1 && < 3.2,
-    pretty >= 1.1 && < 1.2,
-    process >= 1.2 && < 1.3,
-    text >= 0.11 && < 0.12,
-    transformers >= 0.3 && < 0.4
+    bytestring >= 0.9,
+    containers >= 0.5,
+    filepath >= 1.3,
+    parsec >= 3.1,
+    pretty >= 1.1,
+    process >= 1.2,
+    text >= 0.11,
+    transformers >= 0.3
   hs-source-dirs: src
   ghc-options: -Wall
   ghc-prof-options: -fprof-auto-top
@@ -57,14 +57,14 @@ Library
 executable hol-pkg
   build-depends:
     base >= 4.0 && < 5.0,
-    bytestring >= 0.9 && < 0.10,
-    containers >= 0.5 && < 0.6,
-    filepath >= 1.3 && < 1.4,
-    parsec >= 3.1 && < 3.2,
-    pretty >= 1.1 && < 1.2,
-    process >= 1.2 && < 1.3,
-    text >= 0.11 && < 0.12,
-    transformers >= 0.3 && < 0.4
+    bytestring >= 0.9,
+    containers >= 0.5,
+    filepath >= 1.3,
+    parsec >= 3.1,
+    pretty >= 1.1,
+    process >= 1.2,
+    text >= 0.11,
+    transformers >= 0.3
   hs-source-dirs: src
   ghc-options: -Wall -threaded "-with-rtsopts=-N" -rtsopts
   main-is: Main.hs
@@ -73,15 +73,15 @@ test-suite hol-test
   type: exitcode-stdio-1.0
   build-depends:
     base >= 4.0 && < 5.0,
-    bytestring >= 0.9 && < 0.10,
-    containers >= 0.5 && < 0.6,
-    filepath >= 1.3 && < 1.4,
-    parsec >= 3.1 && < 3.2,
-    pretty >= 1.1 && < 1.2,
-    process >= 1.2 && < 1.3,
-    QuickCheck >= 2.4 && < 2.5,
-    text >= 0.11 && < 0.12,
-    transformers >= 0.3 && < 0.4
+    bytestring >= 0.9,
+    containers >= 0.5,
+    filepath >= 1.3,
+    parsec >= 3.1,
+    pretty >= 1.1,
+    process >= 1.2,
+    QuickCheck >= 2.4,
+    text >= 0.11,
+    transformers >= 0.3
   hs-source-dirs: src
   ghc-options: -Wall
   main-is: Test.hs
@@ -90,14 +90,14 @@ benchmark hol-profile
   type: exitcode-stdio-1.0
   build-depends:
     base >= 4.0 && < 5.0,
-    bytestring >= 0.9 && < 0.10,
-    containers >= 0.5 && < 0.6,
-    filepath >= 1.3 && < 1.4,
-    parsec >= 3.1 && < 3.2,
-    pretty >= 1.1 && < 1.2,
-    process >= 1.2 && < 1.3,
-    text >= 0.11 && < 0.12,
-    transformers >= 0.3 && < 0.4
+    bytestring >= 0.9,
+    containers >= 0.5,
+    filepath >= 1.3,
+    parsec >= 3.1,
+    pretty >= 1.1,
+    process >= 1.2,
+    text >= 0.11,
+    transformers >= 0.3
   hs-source-dirs: src
   ghc-options:
     -Wall
