Fix some bitrot

--- a/hol.cabal
+++ b/hol.cabal
@@ -68,6 +68,32 @@ executable hol-pkg
   hs-source-dirs: src
   ghc-options: -Wall -threaded "-with-rtsopts=-N" -rtsopts
   main-is: Main.hs
+  other-modules:
+    HOL.Const
+    HOL.Conv
+    HOL.Data
+    HOL.Name
+    HOL.OpenTheory
+    HOL.OpenTheory.Article
+    HOL.OpenTheory.Interpret
+    HOL.OpenTheory.Package
+    HOL.Parse
+    HOL.Print
+    HOL.Rule
+    HOL.Sequent
+    HOL.Subst
+    HOL.Term
+    HOL.TermAlpha
+    HOL.TermData
+    HOL.Theory
+    HOL.Thm
+    HOL.Type
+    HOL.TypeData
+    HOL.TypeOp
+    HOL.TypeSubst
+    HOL.TypeVar
+    HOL.Util
+    HOL.Var
 
 test-suite hol-test
   type: exitcode-stdio-1.0
@@ -85,6 +111,32 @@ test-suite hol-test
   hs-source-dirs: src
   ghc-options: -Wall
   main-is: Test.hs
+  other-modules:
+    HOL.Const
+    HOL.Conv
+    HOL.Data
+    HOL.Name
+    HOL.OpenTheory
+    HOL.OpenTheory.Article
+    HOL.OpenTheory.Interpret
+    HOL.OpenTheory.Package
+    HOL.Parse
+    HOL.Print
+    HOL.Rule
+    HOL.Sequent
+    HOL.Subst
+    HOL.Term
+    HOL.TermAlpha
+    HOL.TermData
+    HOL.Theory
+    HOL.Thm
+    HOL.Type
+    HOL.TypeData
+    HOL.TypeOp
+    HOL.TypeSubst
+    HOL.TypeVar
+    HOL.Util
+    HOL.Var
 
 benchmark hol-profile
   type: exitcode-stdio-1.0
@@ -104,6 +156,32 @@ benchmark hol-profile
     -fprof-auto-top
     "-with-rtsopts=-p -s -h -i0.1"
   main-is: Profile.hs
+  other-modules:
+    HOL.Const
+    HOL.Conv
+    HOL.Data
+    HOL.Name
+    HOL.OpenTheory
+    HOL.OpenTheory.Article
+    HOL.OpenTheory.Interpret
+    HOL.OpenTheory.Package
+    HOL.Parse
+    HOL.Print
+    HOL.Rule
+    HOL.Sequent
+    HOL.Subst
+    HOL.Term
+    HOL.TermAlpha
+    HOL.TermData
+    HOL.Theory
+    HOL.Thm
+    HOL.Type
+    HOL.TypeData
+    HOL.TypeOp
+    HOL.TypeSubst
+    HOL.TypeVar
+    HOL.Util
+    HOL.Var
 
 source-repository head
   type: git
