--- a/hol.cabal
+++ b/hol.cabal
@@ -24,9 +24,9 @@ Library
     process >= 1.2,
     text >= 0.11,
     transformers >= 0.3
+  default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall
-  ghc-prof-options: -fprof-auto-top
   exposed-modules:
     HOL.Const
     HOL.Conv
@@ -65,6 +65,7 @@ executable hol-pkg
     process >= 1.2,
     text >= 0.11,
     transformers >= 0.3
+  default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall -threaded "-with-rtsopts=-N" -rtsopts
   main-is: Main.hs
@@ -108,6 +109,7 @@ test-suite hol-test
     QuickCheck >= 2.4,
     text >= 0.11,
     transformers >= 0.3
+  default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall
   main-is: Test.hs
@@ -150,10 +152,11 @@ benchmark hol-profile
     process >= 1.2,
     text >= 0.11,
     transformers >= 0.3
+  default-language: Haskell2010
   hs-source-dirs: src
   ghc-options:
     -Wall
-    -fprof-auto-top
+    -fprof-auto-exported
     "-with-rtsopts=-p -s -h -i0.1"
   main-is: Profile.hs
   other-modules:
